# SetManager

./: BUILDING.md  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  helpers.cpp  helpers.hpp  main.cpp  platform.cpp  platform.hpp
src/menu/: menu.hpp
src/user-set/: CMakeLists.txt  derivative-set.cpp  derivative-set.hpp  difference-set.cpp  difference-set.hpp  directory-set.cpp  directory-set.hpp  faux-word-set.cpp  faux-word-set.hpp  global-set.cpp  global-set.hpp  intersection-set.cpp  intersection-set.hpp  relative-complement-set.cpp  relative-complement-set.hpp  subset.cpp  subset.hpp  symmetric-difference-set.cpp  symmetric-difference-set.hpp  union-set.cpp  union-set.hpp  user-set.cpp  user-set.hpp  word-set.cpp  word-set.hpp
